packages/examples/packages/errors/snap.config.ts
import type { SnapConfig } from '@metamask/snaps-cli';
import { resolve } from 'path';

const config: SnapConfig = {
  input: resolve(__dirname, 'src/index.ts'),
  server: {
    port: 8006,
  },
  typescript: {
    enabled: true,
  },
};

export default config;
